# direct-storage-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.MIT  README.md  bindings.txt  rustfmt.toml
.github/workflows/: ci.yml
.metadata/: Microsoft.Direct3D.DirectStorage.Manual.cs  dstorage.cpp  emitter.settings.rsp  generate.proj
api_gen/: Cargo.toml
examples/benchmark/: main.rs
examples/hello_direct_storage/: main.rs
src/: Microsoft.rs  Microsoft_Direct3D_DirectStorage.rs  bindings.rs  com_impl.rs  errors.rs  lib.rs  load.rs  runtime_loaded.rs
