[package]
name = "direct-storage"
version = "0.2.0"
authors = ["Tsukisoft GmbH <contact@tsukisoft.com>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/Tsukisoft/direct-storage-rs"
description = "Rust bindings for DirectStorage"
keywords = ["graphics"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
libloading = "0.7"
once_cell = "1.17"
windows = { version = "0.44", features = ["implement", "Win32_Foundation", "Win32_Graphics_Direct3D12", "Win32_System_LibraryLoader", "Win32_Storage_FileSystem"] }

[dev-dependencies]
windows = { version = "0.44", features = ["Win32_Foundation", "Win32_Graphics_Direct3D12", "Win32_Graphics_Direct3D", "Win32_Graphics_Dxgi_Common", "Win32_System_WindowsProgramming", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_Threading"] }
