[package]
name = "direct-storage"
version = "0.7.1"
authors = [
    "Tsukisoft GmbH <contact@tsukisoft.com>",
    "Marijn Suijten <marijn@traverseresearch.nl>",
]
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/Tsukisoft/direct-storage-rs"
description = "Rust bindings for DirectStorage"
categories = ["external-ffi-bindings", "api-bindings", "graphics", "hardware-support", "os::windows-apis"]
keywords = ["graphics"]
include = ["src", "LICENSE.APACHE", "LICENSE.MIT", "/examples"]

[features]
# Enable `runtime_loaded` module that loads function pointers at runtime instead of linking them at compile-time
loaded = ["dep:libloading"]
default = ["loaded"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-pc-windows-msvc"
targets = []
all-features = true

[dependencies]
libloading = { version = "0.9", optional = true }
windows = { version = ">=0.61, <=0.62", features = ["Win32_Foundation", "Win32_Graphics_Direct3D12", "Win32_Storage_FileSystem"], default-features = false }
windows-core = ">=0.61, <=0.62"
windows-link = ">=0.1, <=0.2"

[dev-dependencies]
windows = { version = ">=0.61, <=0.62", features = ["Win32_Foundation", "Win32_Graphics_Direct3D12", "Win32_Graphics_Direct3D", "Win32_Graphics_Dxgi_Common", "Win32_System_WindowsProgramming", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_Threading"], default-features = false }

[workspace]
members = [
    "api_gen",
]
